# scraper

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  sample.html
.keys/: beef_mint.json  stake_mint.json
examples/: document.rs  telegram_bot.rs
programs/staking/: Cargo.toml
programs/staking/src/: lib.rs
scripts/: airdrop_beef.ts  config.ts  create_mints.ts
src/: main.rs
templates/: sample.html
tests/: staking.ts  token_helper.ts  user.ts
