[package]
name = "scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
log = "0.4"
teloxide = { version = "0.12.2", features = ["macros"] }
pretty_env_logger = "0.4"
tokio = { verion = "1.8", features = ["rt-multi-thread", "macros"] }

